--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,16 @@
 {
     "version": 2,
     "builds": [
-        {
+      {
         "src": "src/server.js",
         "use": "@vercel/node"
-        }
-
+      }
     ],
-
     "routes": [
-        {
-            "src": "(.*)",
-            "dest": "src/server.js"
-        }
+      {
+        "src": "/(.*)",
+        "dest": "/src/server.js"
+      }
     ]
-}
+  }
+  
